[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myutils"
version = "0.1.0"
description = "Quantitative finance utilities for option pricing and implied volatility"
authors = [{name = "Unknown"}]
dependencies = [
    "numpy",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["."]
